# ecommerce-axum

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  main.rs
src/application/: mod.rs
src/application/auth/: mod.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: mod.rs  product.rs
src/domain/ports/: mod.rs  product_repository.rs
src/domain/value_objects/: email.rs  mod.rs  price.rs
src/infrastructure/: db.rs  mod.rs
src/infrastructure/http/: mod.rs
src/infrastructure/http/handlers/: mod.rs
src/infrastructure/http/middleware/: mod.rs
src/infrastructure/persistence/: mod.rs  postgres_product_repo.rs
