[package]
name = "ecommerce-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.3", features = ["json"] }
rust_decimal = { version = "1.41.0", features = ["macros", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "macros"] }
tera = "1.20.1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
